--- a/src/packages/visual-editor.scss
+++ b/src/packages/visual-editor.scss
@@ -1,4 +1,4 @@
- 
+
 @import "./lib/iconfont/iconfont.css";
 
 $headSize:60px;     //顶部操作栏的高度
@@ -128,8 +128,13 @@ $primary:#409EFF; // 主色调
 		top:0;
 		bottom: 0;
 		width: $operatorSize;
-		background:#314659;
-		z-index: 2;
+    background:#ffffff;
+    padding:20px 10px;
+    box-sizing: border-box;
+    z-index: 2;
+    .el-input, .el-select, .el-input-number{
+      width: 100%;
+    }
 	}
 	& > .visual-editor-body{
 		padding-top:$headSize+20px;
